# khmer-style-transfer

./: .gitignore  README.md  index.html  index.qmd  main.py  pyproject.toml  slide.qmd
notebooks/: 01-scraping.ipynb  02-pre-training.ipynb  02-pretraining.ipynb  03-fine-tuning.ipynb
reports/: draft.Rmd  draft.html  draft.tex  report.html  report.qmd
slide/: slide.qmd
