[project]
name = "khmer-tst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "google-genai>=1.55.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "qgrid>=1.3.1",
    "selenium>=4.39.0",
]
